# wezterm_automata

./: .gitignore  AGENTS.md  AGENT_FRIENDLINESS_REPORT.md  AGENT_TODO.md  CHANGELOG.md  Cargo.toml  PLAN.md  PLAN_CODEX.md  README.md  RESEARCH_FINDINGS.md  TAILSCALE_SETUP.md  UPGRADE_LOG.md  claude-upgrade-progress.json  sgconfig.yml  wezterm_automata_guide.md  wezterm_automata_prompt_je.md  wezterm_automation_guide_chatgpt.md  wezterm_guide_gemini.md
.beads/: issues.jsonl
.github/workflows/: ci.yml
crates/wa/: Cargo.toml  build.rs
crates/wa-core/: Cargo.toml
crates/wa-core/benches/: bench_common.rs  delta_extraction.rs  fts_query.rs  pattern_detection.rs  sizing_benchmark.rs  watcher_loop.rs
crates/wa-core/src/: accounts.rs  approval.rs  backup.rs  browser.rs  cass.rs  caut.rs  chaos.rs  circuit_breaker.rs  config.rs  crash.rs  degradation.rs  desktop_notify.rs  diagnostic.rs  distributed.rs  dry_run.rs  error.rs  error_codes.rs  event_templates.rs  events.rs  explanations.rs  export.rs  ingest.rs  ipc.rs  learn.rs  lib.rs  logging.rs  mcp.rs  patterns.rs  plan.rs  policy.rs  retry.rs  runtime.rs  setup.rs  storage.rs  suggestions.rs  sync.rs  tailer.rs  vendored.rs  wait.rs  watchdog.rs  (+3 more)
crates/wa-core/src/browser/: bootstrap.rs  mod.rs  openai_device.rs
crates/wa-core/src/output/: error_renderer.rs  format.rs  mod.rs  renderers.rs  table.rs
crates/wa-core/src/tui/: app.rs  mod.rs  query.rs  views.rs
crates/wa-core/tests/: daemon_integration.rs  explainability_e2e.rs  quickfix_tests.rs  repro_bug.rs  split_pattern.rs  web.rs
crates/wa-core/tests/corpus/claude_code/: api_key_error_near_miss.txt  api_key_error_v2.expect.json  api_key_error_v2.txt  approval_needed_near_miss.txt  approval_needed_v2.expect.json  approval_needed_v2.txt  context_warning_near_miss.txt  context_warning_v2.expect.json  context_warning_v2.txt  cost_summary_near_miss.txt  cost_summary_v2.expect.json  cost_summary_v2.txt  network_error_near_miss.txt  network_error_v2.expect.json  network_error_v2.txt  session_end_near_miss.txt  session_end_v2.expect.json  session_end_v2.txt  thinking_v2.expect.json  timeout_error_v2.expect.json  timeout_error_v2.txt  tool_use_v2.expect.json  tool_use_v2.txt  tool_use_v3.expect.json  tool_use_v3.txt
crates/wa-core/tests/corpus/codex/: device_code_v2.expect.json  device_code_v2.txt  resume_hint_near_miss.txt  resume_hint_v2.expect.json  resume_hint_v2.txt  session_summary.expect.json  session_summary.txt  token_usage_no_reasoning.expect.json  token_usage_no_reasoning.txt  usage_reached_near_miss.txt  usage_reached_v2.expect.json  usage_reached_v2.txt  usage_warning_10_v2.expect.json  usage_warning_10_v2.txt  usage_warning_5_v2.expect.json  usage_warning_5_v2.txt
crates/wa-core/tests/corpus/gemini/: session_resume_hint_v2.expect.json  session_resume_hint_v2.txt  usage_reached_v2.expect.json  usage_reached_v2.txt  usage_warning_near_miss.txt  usage_warning_v2.expect.json  usage_warning_v2.txt
crates/wa-core/tests/corpus/wezterm/: connection_lost_v2.expect.json  connection_lost_v2.txt  pane_exited_v2.expect.json  pane_exited_v2.txt
crates/wa-core/tests/fixtures/patterns/: builtin.json
crates/wa-core/tests/fixtures/setup/: shell_missing.bashrc  shell_present.bashrc  wezterm_missing.lua  wezterm_present.lua
crates/wa/src/: main.rs  mcp.rs
docs/: agent-quirks-catalog.md  architecture.md  auth-realities-matrix-openai-codex.md  cli-reference.md  distributed-security-spec.md  e2e-integration-checklist.md  mcp-api-spec.md  operator-playbook.md  remote-setup-spec.md  risk-model-design.md  sync-spec.md
docs/json-schema/: wa-robot-events.json  wa-robot-rules-test.json  wa-robot-state.json
fixtures/e2e/: dummy_burst.sh
fuzz/: Cargo.toml
rules/: no-adhoc-regex.yml
rules/tests/: should_fail_adhoc_regex.rs  should_pass_in_patterns.rs
scripts/: e2e_cli_polish.sh  e2e_doctor.sh  e2e_risk_gating.sh  e2e_schema_pipeline.sh  e2e_test.sh  lint-patterns.sh  validate_e2e_registry.sh
