[workspace]
resolver = "2"
members = [
    "crates/wa",
    "crates/wa-core",
]

# Crate boundary rules:
# - wa-core: business logic only (no UI/transport deps by default)
# - wa: thin CLI wrapper over wa-core
# - optional frontends (mcp/web/tui/browser) are feature-gated

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Dicklesworthstone"]
license = "MIT"
repository = "https://github.com/Dicklesworthstone/wezterm_automata"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
# Use explicit priorities to avoid conflicts
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Allow some pedantic lints that are too strict for stubs
module_name_repetitions = "allow"
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_docs_in_private_items = "allow"
doc_markdown = "allow"
# Nursery lints that are too noisy for stub code
unused_async = "allow"
collection_is_never_read = "allow"
missing_const_for_fn = "allow"
# Cargo lints - we don't have full metadata yet
multiple_crate_versions = "allow"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["full"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Database
rusqlite = { version = "0.32", features = ["bundled", "backup", "functions"] }

# Pattern matching
aho-corasick = "1.1"
memchr = "2.7"
fancy-regex = "0.14"

# Config
toml = "0.8"

# Internal crates
wa-core = { path = "crates/wa-core" }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
panic = "abort"     # Smaller binary, no unwinding overhead
strip = true        # Remove debug symbols
