[workspace]
resolver = "2"
members = [
    "crates/wa",
    "crates/wa-core",
    "fuzz",
]

# Crate boundary rules:
# - wa-core: business logic only (no UI/transport deps by default)
# - wa: thin CLI wrapper over wa-core
# - optional frontends (mcp/web/tui/browser) are feature-gated

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Dicklesworthstone"]
license = "MIT"
repository = "https://github.com/Dicklesworthstone/wezterm_automata"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
# Use explicit priorities to avoid conflicts
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Allow some pedantic lints that are too strict for stubs
module_name_repetitions = "allow"
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_docs_in_private_items = "allow"
doc_markdown = "allow"
# Nursery lints that are too noisy for stub code
unused_async = "allow"
collection_is_never_read = "allow"
missing_const_for_fn = "allow"
# Cargo lints - we don't have full metadata yet
multiple_crate_versions = "allow"
# Style lints that conflict with panic!/assert! macros in tests
uninlined_format_args = "allow"
# Range patterns lint that's too strict
manual_range_patterns = "allow"
# Safe sign casts for timestamps
cast_sign_loss = "allow"
# Same arms are acceptable for clarity
match_same_arms = "allow"
# Doc link style
doc_link_with_quotes = "allow"
# Structs with bools for configuration
struct_excessive_bools = "allow"
# String formatting style - push_str is fine
format_push_string = "allow"
# if let/else with Options is clearer than map_or_else for complex cases
option_if_let_else = "allow"
# Truncation is acceptable for timestamps
cast_possible_truncation = "allow"
# Many args are acceptable for CLI commands
too_many_arguments = "allow"
# Branches sharing code is fine for clarity
branches_sharing_code = "allow"
# Redundant closures sometimes needed for type inference
redundant_closure_for_method_calls = "allow"
# #[must_use] too noisy for internal functions
must_use_candidate = "allow"
# Underscore bindings for API consistency
used_underscore_binding = "allow"
# Constant assertions legitimate in tests
assertions_on_constants = "allow"
# Default::default() clearer in some contexts
default_trait_access = "allow"
# Significant drops can be intentional
significant_drop_in_scrutinee = "allow"
# Clone sometimes needed for borrow checker
redundant_clone = "allow"
# Struct field naming flexibility
struct_field_names = "allow"
# usize/i64 casts acceptable for database
cast_possible_wrap = "allow"
# map_unwrap_or - closure form clearer in some contexts
map_unwrap_or = "allow"
# Field default assignment sometimes clearer
field_reassign_with_default = "allow"
# Cast precision loss acceptable for stats
cast_precision_loss = "allow"
# u64 to f64 casts acceptable for ratios
cast_lossless = "allow"
# Temporary drops can be intentional
significant_drop_tightening = "allow"
# Use same type repetition for clarity
use_self = "allow"
# Single char patterns allowed
single_char_pattern = "allow"
# Debug impl flexibility
missing_fields_in_debug = "allow"
# Doc length flexibility
too_long_first_doc_paragraph = "allow"
# Unnecessary wraps acceptable for error handling consistency
unnecessary_wraps = "allow"
# Default unit struct construction acceptable
default_constructed_unit_structs = "allow"
# Pass by value acceptable for small types
needless_pass_by_value = "allow"
# Sort on primitives acceptable
stable_sort_primitive = "allow"
# Bool not operations acceptable for clarity
nonminimal_bool = "allow"
# If collapse not always clearer
collapsible_if = "allow"
# Format! usage acceptable
useless_format = "allow"
# Derivable impls flexibility
derivable_impls = "allow"
# if not else sometimes clearer
if_not_else = "allow"
# Literal strings with format args acceptable for template patterns
literal_string_with_formatting_args = "allow"
# Let return acceptable for clarity
let_and_return = "allow"
# Useless conversion acceptable for type clarity
useless_conversion = "allow"
# Long literals acceptable for constants
unreadable_literal = "allow"
# assert_eq with bool acceptable for clarity
bool_assert_comparison = "allow"
# Match for destructuring acceptable
single_match = "allow"
# Vec parameter acceptable for ownership transfer
ptr_arg = "allow"
# Large stack allocations acceptable
large_stack_frames = "allow"
# Manual let else acceptable
manual_let_else = "allow"
# Format strings acceptable
print_literal = "allow"
# to_string on deref acceptable
str_to_string = "allow"
# Items after statements acceptable in some contexts
items_after_statements = "allow"
# Single match acceptable for clarity
single_match_else = "allow"
# Implicit to_string acceptable
implicit_clone = "allow"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
thiserror = "2.0.18"
anyhow = "1.0.100"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.5.54", features = ["derive", "env"] }

# Database
rusqlite = { version = "0.38.0", features = ["bundled", "backup", "functions"] }

# Pattern matching
aho-corasick = "1.1.4"
memchr = "2.7.6"
fancy-regex = "0.14"
regex = "1.12.2"
bloomfilter = "1.0"

# Crypto / randomness
rand = "0.9.2"
sha2 = "0.10.9"

# Config
toml = "0.8.23"
toml_edit = "0.24.0"
serde_yaml = "0.9.34"

# Serialization
toon_rust = { git = "https://github.com/Dicklesworthstone/toon_rust", branch = "master" }

# WezTerm (vendored, optional)
codec = { git = "https://github.com/wez/wezterm" }
config = { git = "https://github.com/wez/wezterm" }
mux = { git = "https://github.com/wez/wezterm" }
wezterm-term = { git = "https://github.com/wez/wezterm" }

# File locking
fs2 = "0.4.3"

# TUI (optional)
ratatui = "0.30.0"
crossterm = "0.29.0"

# Benchmarking
criterion = { version = "0.7.0", features = ["async_tokio"] }

# FastMCP (optional MCP server dependencies)
asupersync = { path = "../asupersync" }
rich_rust = { path = "../rich_rust" }
log = "0.4"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
notify = "8"
glob = "0.3"
console = "0.15"
getrandom = "0.3"
trybuild = { version = "1", default-features = false }
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"
fastmcp = { path = "../fastmcp_rust/crates/fastmcp" }
fastmcp-core = { path = "../fastmcp_rust/crates/fastmcp-core" }
fastmcp-transport = { path = "../fastmcp_rust/crates/fastmcp-transport" }
fastmcp-protocol = { path = "../fastmcp_rust/crates/fastmcp-protocol" }
fastmcp-server = { path = "../fastmcp_rust/crates/fastmcp-server" }
fastmcp-client = { path = "../fastmcp_rust/crates/fastmcp-client" }
fastmcp-macros = { path = "../fastmcp_rust/crates/fastmcp-macros" }
fastmcp-console = { path = "../fastmcp_rust/crates/fastmcp-console" }
fastapi = { path = "../fastapi_rust/crates/fastapi" }
fastapi-core = { path = "../fastapi_rust/crates/fastapi-core" }
fastapi-http = { path = "../fastapi_rust/crates/fastapi-http" }
fastapi-router = { path = "../fastapi_rust/crates/fastapi-router" }
fastapi-macros = { path = "../fastapi_rust/crates/fastapi-macros" }
fastapi-openapi = { path = "../fastapi_rust/crates/fastapi-openapi" }
fastapi-output = { path = "../fastapi_rust/crates/fastapi-output" }

# Internal crates
wa-core = { path = "crates/wa-core" }

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
panic = "abort"     # Smaller binary, no unwinding overhead
strip = true        # Remove debug symbols
