[package]
name = "wa-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[dependencies]
libfuzzer-sys = "0.4.10"
wa-core = { path = "../crates/wa-core" }
toml = "0.8.23"
serde = { version = "1.0.228", features = ["derive"] }
rusqlite = { version = "0.38.0", features = ["bundled", "backup", "functions"] }

[profile.release]
debug = 1
