[package]
name = "wa-core"
description = "Core library for WezTerm Automata - terminal hypervisor for AI agent swarms"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["terminal", "wezterm", "automation", "ai-agents"]
categories = ["development-tools"]

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Pattern matching
aho-corasick.workspace = true
memchr.workspace = true
fancy-regex.workspace = true
regex.workspace = true

# Approval tokens
rand.workspace = true
sha2.workspace = true

# Database
rusqlite.workspace = true

# Config
toml.workspace = true

# File locking
fs2.workspace = true
base64 = "0.22.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
proptest = "1.5"
tempfile = "3.10"
criterion = { version = "0.5", features = ["async_tokio"] }

# Benchmarks
[[bench]]
name = "pattern_detection"
harness = false

[[bench]]
name = "delta_extraction"
harness = false

[[bench]]
name = "fts_query"
harness = false

[[bench]]
name = "watcher_loop"
harness = false

[features]
default = []
# Public feature flags (stable surface)
vendored = ["vendored-wezterm"]
browser = ["browser-automation"]
mcp = ["mcp-server"]
web = []
tui = []
metrics = []
distributed = []

# Optional heavy integrations - feature-gated (internal)
vendored-wezterm = []
browser-automation = []
mcp-server = []
