[package]
name = "wa-core"
description = "Core library for WezTerm Automata - terminal hypervisor for AI agent swarms"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["terminal", "wezterm", "automation", "ai-agents"]
categories = ["development-tools"]

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Pattern matching
aho-corasick.workspace = true
memchr.workspace = true
fancy-regex.workspace = true
regex.workspace = true
bloomfilter.workspace = true

# Approval tokens and plan hashing
rand.workspace = true
sha2.workspace = true
hex = "0.4"

# Database
rusqlite.workspace = true

# Config
toml.workspace = true
serde_yaml.workspace = true

# Directory paths
dirs = "6.0.0"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }

# File locking
fs2.workspace = true
base64 = "0.22.1"

# Vendored WezTerm crates (optional)
codec = { workspace = true, optional = true }
config = { workspace = true, optional = true }
mux = { workspace = true, optional = true }
wezterm-term = { workspace = true, optional = true }

# TUI (optional, behind feature)
ratatui = { workspace = true, optional = true }
crossterm = { workspace = true, optional = true }

# MCP server (optional, behind feature)
fastmcp = { workspace = true, optional = true }
# Web server (optional, behind feature)
fastapi = { workspace = true, optional = true }
fastapi-core = { workspace = true, optional = true }
# Sync (optional, behind feature)
asupersync = { workspace = true, optional = true }
# Distributed mode (optional, behind feature)
rustls = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
proptest = "1.8.0"
tempfile = "3.23.0"
criterion = { version = "0.7.0", features = ["async_tokio"] }

# Benchmarks
[[bench]]
name = "pattern_detection"
harness = false

[[bench]]
name = "delta_extraction"
harness = false

[[bench]]
name = "fts_query"
harness = false

[[bench]]
name = "watcher_loop"
harness = false

[[bench]]
name = "sizing_benchmark"
harness = false

[features]
default = []
# Public feature flags (stable surface)
vendored = ["vendored-wezterm"]
browser = ["browser-automation"]
mcp = ["mcp-server"]
web = ["dep:fastapi", "dep:fastapi-core", "dep:asupersync"]
tui = ["dep:ratatui", "dep:crossterm"]
metrics = []
distributed = ["dep:rustls", "dep:tokio-rustls", "dep:rustls-pemfile"]
sync = ["dep:asupersync"]

# Optional heavy integrations - feature-gated (internal)
vendored-wezterm = ["dep:codec", "dep:config", "dep:mux", "dep:wezterm-term"]
browser-automation = []
mcp-server = ["dep:fastmcp"]
