[package]
name = "wa"
description = "WezTerm Automata CLI - terminal hypervisor for AI agent swarms"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["terminal", "wezterm", "automation", "ai-agents"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "wa"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
wa-core.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toon_rust.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
fancy-regex.workspace = true
toml.workspace = true
toml_edit.workspace = true
dirs = "5.0"

[features]
default = []
vendored = ["wa-core/vendored"]
browser = ["wa-core/browser"]
mcp = ["wa-core/mcp"]
web = ["wa-core/web"]
tui = ["wa-core/tui"]
metrics = ["wa-core/metrics"]
distributed = ["wa-core/distributed"]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
